fix: text align to start

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,19 +78,19 @@
     @apply w-[312px] flex flex-col gap-4;
   }
   .team-people {
-    @apply flex items-center gap-4 rounded-full pl-3.5 py-3 transition-colors ease-in duration-150;
+    @apply flex items-center justify-start gap-4 rounded-full pl-3.5 py-3 transition-colors ease-in duration-150;
   }
   .team-people img {
     @apply w-16 h-16 rounded-full;
   }
   .team-people h6 {
-    @apply text-xl leading-8 line-clamp-1 -tracking-[0.6px] font-medium;
+    @apply text-xl leading-8 line-clamp-1 text-start -tracking-[0.6px] font-medium;
   }
   .team-people p {
-    @apply text-lg leading-[26px] line-clamp-1 text-foreground/60;
+    @apply text-lg leading-[26px] text-start line-clamp-1 text-foreground/60;
   }
   .team-people:hover {
-    @apply bg-foreground/10;
+    @apply bg-foreground/10 cursor-pointer;
   }
   .statistics-container {
     @apply flex w-full items-center gap-[63px];
